# vdbg_dashboard

./: Inicio.py  README.md  environment.yml  menu.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
.streamlit/: config.toml
data/: clean_data.pkl
data/raw/: datos_23_24.pkl
functions/: constants_values.py  data_functions.py  graphs.py  scores_and_tables.py  widgets.py
pages/: 1_Datos_demográficos.py  2_Uso_de_internet_y_redes_sociales.py  3_Incidencia_por_tipo_de_violencia.py  4_Conocimiento_sobre_VDBG.py  5_Cruce_de_variables.py  6_Acerca_de.py
