[project]
name = "vdbg_dashboard"
version = "0.1.0"
description = "Aplicación web interactiva desarrollada con Streamlit para visualizar los datos del estudio sobre violencias digitales basadas en género para Venezuela, años 2023 y 2024."
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
]
