[project]
name = "vdbg-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "plotly==5.16.1",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
]
